Added configuration stuff

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.8.3
 
 Package: hostuuid
 Architecture: all
-Depends: perl, libuuid-tiny-perl
+Depends: debconf, perl, libuuid-tiny-perl
 Description: A program to assign & print a UUID per host
  Create, manage and display a UUID which is stored into
  /etc/hostuuid to make the distinction of hosts easier and
