--- a/debian/rules
+++ b/debian/rules
@@ -1,68 +1,5 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
+# -*- mode: makefile; coding: utf-8 -*-
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-build: build-stamp
-
-build-stamp:
-	dh_testdir
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-	
-	dh_clean
-	rm -rf $(CURDIR)/debian/hostuuid/
-	
-	rm -f debian/manpages
-#	rm -rf debian/pod2man
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-	dh_installdebconf
-	rm -f debian/manpages
-	pod2man --section=1 hostuuid debian/manpages/hostuuid.1
-#	rm -f debian/manpages
-#	pod2man --section=1 hostuuid > debian/manpages
-
-	# Add here commands to install the package into debian/hostuuid.
-#	cp ./hostuuid            debian/hostuuid/usr/bin/
-	install -m 755  hostuuid debian/hostuuid/usr/bin/hostuuid
-
-# Build architecture-dependent files here.
-binary-arch: build install
-# We have nothing to do by default.
-
-#	rm -f debian/manpages
-#	test -d debian/pod2man || mkdir debian/pod2man
-#	pod2man --section=1 hostuuid debian/pod2man/hostuuid.1
-#	echo debian/pod2man/hostuuid.1 >> debian/manpages
-#	
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/perlmodule.mk
