--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: hostuuid
 Section: admin
 Priority: optional
 Maintainer: Richard Hartmann <richih.mailinglist@gmail.com>
-Build-Depends: cdbs (>= 0.4.4), debhelper (>= 5.0.0), perl (>= 5.8.0-7)
+Build-Depends: cdbs (>= 0.4.4), debhelper (>= 7.0.0), perl (>= 5.8.0-7), po-debconf
 Standards-Version: 3.8.3
 
 Package: hostuuid
